testsuite/tests/patsyn/should_fail/unboxed-bind.stderr

unboxed-bind.hs:11:11: error: [GHC-21030] [-Wunbanged-strict-patterns (in -Wextra), Werror=unbanged-strict-patterns]
    Pattern bindings containing unlifted types should use
    an outermost bang pattern:
      P arg = x
